<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/itemCheckbox2"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:text="@string/item"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/descriptionTextView2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/itemCheckbox2"
        android:layout_marginStart="33dp"
        android:text="@string/description"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/countEditText2"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/number_items"
        android:textSize="24sp"
        android:visibility="visible" />

</RelativeLayout>